--- a/index.html
+++ b/index.html
@@ -281,12 +281,15 @@
         <div class="container">
             <h2>Demostración</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <video id="demoVideo" controls>
+                    <source src="Presentación_Timeoverflow.mp4" type="video/mp4">
+                    Tu navegador no soporta videos HTML5.
+                </video>
             </div>
-            <p class="demo-description">Vea en acción cómo funciona el sistema de alianzas y transferencias interbancarias en TimeOverflow.</p>
+            <button id="fullscreenBtn" class="fullscreen-button">Ver en pantalla completa</button>
             <div class="demo-buttons">
                 <a href="https://github.com/gmartincor/deploy_timeoverflow/tree/map-filters" class="btn primary" target="_blank">Explorar el Código <i class="fab fa-github"></i></a>
-                <a href="https://timeoverflow.org" class="btn secondary" target="_blank">Visitar TimeOverflow</a>
+                <a href="https://www.timeoverflow.org/" class="btn secondary" target="_blank">Visitar TimeOverflow</a>
             </div>
         </div>
     </section>
@@ -312,8 +315,8 @@
                     <p>Guillermo Martín Correa</p>
                     <div class="social-links">
                         <a href="https://github.com/gmartincor" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://linkedin.com/in/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:correo@ejemplo.com"><i class="fas fa-envelope"></i></a>
+                        <a href="https://www.linkedin.com/in/guillermo-martin-correa-b623b0134" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:guillermomc007@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
