--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://github.com/gmartincor/deploy_timeoverflow/tree/map-filters" class="btn secondary" target="_blank">Ver Código <i class="fab fa-github"></i></a>
             </div>
             <div class="scroll-indicator">
-                <span>Descubre más</span>
+                <a href="#bancos" class="scroll-link">Descubre más</a>
                 <i class="fas fa-chevron-down"></i>
             </div>
         </div>
