--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <section class="project" id="proyecto">
         <div class="container">
-            <h2>La Solución: TimeOverflow Evolucionado</h2>
+            <h2>La Solución: TimeOverflow Adaptado a nuevas conexiones</h2>
             <div class="solution-illustration">
                 <div class="bank bank-connected">
                     <div class="bank-icon">
