--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     Tu navegador no soporta videos HTML5.
                 </video>
             </div>
-            <button id="fullscreenBtn" class="fullscreen-button">Ver en pantalla completa</button>
+            <a id="fullscreenBtn" class="fullscreen-button" href="#fullscreen">Ver en pantalla completa</a>
             <div class="demo-buttons">
                 <a href="https://github.com/gmartincor/deploy_timeoverflow/tree/map-filters" class="btn primary" target="_blank">Explorar el Código <i class="fab fa-github"></i></a>
                 <a href="https://www.timeoverflow.org/" class="btn secondary" target="_blank">Visitar TimeOverflow</a>
