--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </div>
             <a id="fullscreenBtn" class="btn fullscreen-button" href="#fullscreen">Ver en pantalla completa</a>
             <div class="demo-buttons">
-                <a href="https://github.com/gmartincor/deploy_timeoverflow/tree/map-filters" class="btn primary" target="_blank">Explorar el Código <i class="fab fa-github"></i></a>
+                <a href="https://github.com/gmartincor/deploy_timeoverflow/tree/map-filters" class="btn primary" target="_blank">Explorar Código <i class="fab fa-github"></i></a>
                 <a href="https://www.timeoverflow.org/" class="btn secondary" target="_blank">Visitar TimeOverflow</a>
             </div>
         </div>
